--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
 <body>
 
-  <!-- ================= HEADER ================= -->
+  <!--  HEADER  -->
   <header>
 
-    <!-- ================= NAVBAR ================= -->
+    <!--  NAVBAR  -->
     <nav class="main-nav">
       <div class="navbar">
 
@@ -52,12 +52,12 @@
     </nav>
 
   </header>
-  <!-- ================= HEADER END ================= -->
+  <!-- HEADER END  -->
 
 
   <main>
 
-    <!-- ================= HERO SECTION ================= -->
+    <!-- HERO SECTION  -->
     <section class="hero-section">
       <div class="hero-inner">
 
@@ -93,10 +93,10 @@
 
       </div>
     </section>
-    <!-- ================= HERO END ================= -->
+    <!--  HERO END  -->
 
 
-    <!-- ================= NOTES SECTION ================= -->
+    <!--  NOTES SECTION -->
     <section class="notes-section">
       <div class="notes-inner">
 
@@ -149,10 +149,10 @@
         </div>
       </div>
     </section>
-    <!-- ================= NOTES END ================= -->
+    <!--  NOTES END  -->
 
 
-    <!-- ================= SECOND BRAIN SECTION ================= -->
+    <!--  SECOND BRAIN SECTION -->
     <section class="you-second-brain-section">
       <div class="inner-you-second-brain-section">
 
@@ -182,10 +182,10 @@
 
       </div>
     </section>
-    <!-- ================= SECOND BRAIN END ================= -->
+    <!--  SECOND BRAIN END  -->
 
 
-    <!-- ================= CTA SECTION ================= -->
+    <!--  CTA SECTION  -->
     <section class="cta-section">
       <div class="cta-inner">
 
@@ -193,11 +193,11 @@
 
         <p class="cta-desc">
           Join thousands of learners who are building their personal knowledge vaults.
-          Start free — no credit card required.
+          <br>Start free — no credit card required.
         </p>
 
         <button class="btn-primary">
-          Start Building Your Vault <i class="fa-solid fa-arrow-right"></i>
+          Get Early Access <i class="fa-solid fa-arrow-right"></i>
         </button>
 
         <p class="cta-note">
@@ -206,40 +206,41 @@
 
       </div>
     </section>
-    <!-- ================= CTA END ================= -->
+    <!--  CTA END  -->
 
   </main>
 
 
-  <!-- ================= FOOTER ================= -->
+  <!-- FOOTER  -->
   <footer class="site-footer">
 
     <div class="footer-top">
 
       <!-- Logo -->
       <div class="footer-logo">
-        <img src="./assets/logo-navbar.png" alt="Knowledge Vault Logo">
+        <img src="./assets/logo-footer.png" alt="Knowledge Vault Logo">
       </div>
 
       <!-- Social -->
       <div class="footer-social">
         <h3>Social Links</h3>
         <div class="social-icons">
-          <i class="fa-brands fa-facebook"></i>
-          <i class="fa-brands fa-twitter"></i>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-linkedin"></i>
+         <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+          <a href="https://twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+          <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
         </div>
       </div>
 
     </div>
 
     <div class="footer-bottom">
+      <hr>
       <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
     </div>
 
   </footer>
-  <!-- ================= FOOTER END ================= -->
+  <!--  FOOTER END  -->
 
 </body>
 </html>
