--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="notes-card-parent">
 
           <div class="notes-card">
-            <img src="./assets/hero-bg.png" alt="">
+            <img src="./assets/Vector.png" alt="">
             <h2>Scattered notes</h2>
             <p>
               Your ideas live in 10 different apps,
@@ -120,7 +120,7 @@
           </div>
 
           <div class="notes-card">
-            <img src="./assets/notes-1.png" alt="">
+            <img src="./assets/Bookmarks.png" alt="">
             <h2>Bookmark overload</h2>
             <p>
               Hundreds of saved links you’ll never
@@ -129,7 +129,7 @@
           </div>
 
           <div class="notes-card">
-            <img src="./assets/notes-1.png" alt="">
+            <img src="./assets/Brain.png" alt="">
             <h2>No idea connections</h2>
             <p>
               Insights stay isolated, never
@@ -138,7 +138,7 @@
           </div>
 
           <div class="notes-card">
-            <img src="./assets/notes-1.png" alt="">
+            <img src="./assets/Info.png" alt="">
             <h2>Forgetting what you learned</h2>
             <p>
               Knowledge fades because there’s
@@ -173,10 +173,10 @@
           </p>
 
           <ul class="brain-list">
-            <li>Capture ideas with structure built-in from day one</li>
-            <li>Connect related concepts automatically as you write</li>
-            <li>Build lasting knowledge through reflection prompts</li>
-            <li>Find anything instantly with semantic search</li>
+           <li> <img src="./assets/CheckCircle.png" alt=""> Capture ideas with structure built-in from day one</li>
+            <li> <img src="./assets/CheckCircle.png" alt=""> Connect related concepts automatically as you write</li>
+          <li> <img src="./assets/CheckCircle.png" alt=""> Build lasting knowledge through reflection prompts</li>
+            <li> <img src="./assets/CheckCircle.png" alt=""> Find anything instantly with semantic search</li>
           </ul>
         </div>
 
